<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <FrameLayout
        android:id="@+id/scrollView2"
        android:layout_width="318dp"
        android:layout_height="225dp"
        android:layout_marginBottom="88dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/iv_auto_image_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            />

        <ImageView
            android:id="@+id/iv_gif_container"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom|start"
            android:layout_margin="50dp" />



    </FrameLayout>

    <RelativeLayout
        android:id="@+id/locationSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/locationView"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/style_1"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="Location"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/locationView"
            android:layout_alignEnd="@id/locationView"
            android:layout_alignBottom="@id/locationView"
            android:src="@drawable/ic_baseline_my_location_24"

            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/locationSearch"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_notifications_24" />

    <ImageButton
        android:id="@+id/imageView6"
        android:layout_width="34dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_menu_24" />


    <ImageView
        android:id="@+id/imageVi"
        android:layout_width="96dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/applogo"
        />
    <!-- Images with request -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="145dp"
        android:layout_alignLeft="@id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageVi"
        app:srcCompat="@mipmap/motocycle" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284">

        <ImageView
            android:id="@+id/ellipse_1"
            android:layout_width="105dp"
            android:layout_height="102dp"
            android:background="@drawable/circlebutton" />

        <TextView
            android:id="@+id/request_mec"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Requestmechanic"
            android:textColor="#FFFFFF" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="175dp"
        android:layout_height="130dp"
        android:layout_alignRight="@id/frameLayout"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@mipmap/scooter" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="164dp"
        android:layout_height="117dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageVi"
        app:srcCompat="@mipmap/spannerImage" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="157dp"
        android:layout_height="111dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:rotation="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@mipmap/secondtooll" />

    <!-- end -->
    <!--    <RelativeLayout-->
    <!--        android:id="@+id/section_6"-->
    <!--        android:layout_width="161dp"-->
    <!--        android:layout_height="433dp"-->
    <!--        android:layout_marginStart="68dp"-->
    <!--        android:background="@drawable/section_6"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        tools:layout_editor_absoluteY="298dp" />-->

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/style_1"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/Help"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_1"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/booking"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>